@@ -69,6 +69,7 @@
 			<label index="tt_content.list_type_pi1">Data store</label>
 			<label index="tt_content.list_type_pi2">Data store RSS</label>
 			<label index="tt_content.list_type_pi3">Stats files download</label>
+			<label index="tx_icsoddatastore_filemount">DATASTORE filemount</label>
 		</languageKey>
 		<languageKey index="fr" type="array">
 			<label index="tx_icsoddatastore_filegroups">Groupe de fichier (opendata)</label>
@@ -132,6 +133,7 @@
 			<label index="tt_content.list_type_pi1">Jeux de données</label>
 			<label index="tt_content.list_type_pi2">Jeux de données RSS</label>
 			<label index="tt_content.list_type_pi3">Stats de técléchargements de fichiers</label>
+			<label index="tx_icsoddatastore_filemount">Point de montage du DATASTORE</label>
 		</languageKey>
 	</data>
 </T3locallang>
