@@ -1,4 +1,5 @@
 2012-05-03 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added datastore filemount.
 	* Refactor: Added TCA field files on filegroup.
 	
 2012-04-25 Emilie SAGNIEZ  <emilie@in-cite.net>
